Refactor configuration verification option naming across multiple modules
- Changed the option name from `configverify` to `config_verify` for consistency in the following modules:
  - sda_fabric_virtual_networks_workflow_manager
  - sda_host_port_onboarding_workflow_manager
  - site_intent
  - site_workflow_manager
  - swim_intent
  - swim_workflow_manager
  - tags_workflow_manager
  - template_intent
  - template_workflow_manager
  - user_role_workflow_manager
  - wireless_design_workflow_manager

- Updated the corresponding test cases to reflect the new option name.
- Adjusted data types for certain parameters from `str` to `int` where applicable.
- Added aliases for several parameters to enhance usability and maintain consistency across modules.

--- a/playbooks/PnP.yml
+++ b/playbooks/PnP.yml
@@ -21,7 +21,7 @@
         !!merge <<: *catalystcenter_login
         catc_log: true
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - device_info:
               - serial_number: QD2425L8M7
@@ -93,7 +93,7 @@
         !!merge <<: *catalystcenter_login
         catc_log: true
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - device_info:
               - serial_number: QD2425L8M7  # Will get deleted
