--- a/playbooks/lan_automation_workflow_manager.yml
+++ b/playbooks/lan_automation_workflow_manager.yml
@@ -18,7 +18,7 @@
         catc_log_level: "{{ catc_log_level }}"
         catc_log: true
         catc_log_append: false
-        configverify: false
+        config_verify: false
         state: deleted
         config:
           - lan_automation:
