--- a/playbooks/sda_fabric_virtual_networks_workflow_manager.yml
+++ b/playbooks/sda_fabric_virtual_networks_workflow_manager.yml
@@ -17,7 +17,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log_level: DEBUG
         catc_log: true
-        configverify: true
+        config_verify: true
         state: deleted
         config:
           - fabric_vlan:
