--- a/tests/integration/ccc_discovery_management/tests/test_discovery_management.yml
+++ b/tests/integration/ccc_discovery_management/tests/test_discovery_management.yml
@@ -19,7 +19,7 @@
         debug: "{{ debug }}"
         catc_log: true
         catc_log_level: DEBUG
-        configverify: true
+        config_verify: true
 
   - name: Clean up vars
     include_vars:
