--- a/playbooks/device_credential_workflow_manager.yml
+++ b/playbooks/device_credential_workflow_manager.yml
@@ -16,7 +16,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log: true
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - global_credential_details:
               cli_credential:
@@ -67,7 +67,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log: true
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - assign_credentials_to_site:
               cli_credential:
@@ -98,7 +98,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log: true
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - global_credential_details:
               cli_credential:
