--- a/playbooks/ise_radius_integration_workflow_manager.yml
+++ b/playbooks/ise_radius_integration_workflow_manager.yml
@@ -19,7 +19,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - authentication_policy_server:
               - server_type: AAA  # [ISE, AAA]
@@ -47,7 +47,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - authentication_policy_server:
               - server_ip_address: 10.0.0.20
@@ -64,7 +64,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - authentication_policy_server:
               - server_type: ISE  # [ISE, AAA]
@@ -102,7 +102,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - authentication_policy_server:
               - server_ip_address: 10.195.243.59
