--- a/playbooks/network_compliance_workflow_manager.yml
+++ b/playbooks/network_compliance_workflow_manager.yml
@@ -16,7 +16,7 @@
       catc_log: true
       catc_log_level: INFO
       catc_log_append: false
-      configverify: true
+      config_verify: true
   tasks:
     - name: Run Compliance check using IP address list (run_compliance by default is true)
       cisco.catalystcenter.network_compliance_workflow_manager:
