--- a/playbooks/network_settings_workflow_manager.yml
+++ b/playbooks/network_settings_workflow_manager.yml
@@ -19,7 +19,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - global_pool_details:
               settings:
@@ -108,7 +108,7 @@
         catc_log: true
         catc_log_level: "{{ catc_log_level }}"
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - global_pool_details:
               settings:
