--- a/playbooks/rma_workflow_manager.yml
+++ b/playbooks/rma_workflow_manager.yml
@@ -17,7 +17,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log: true
         catc_log_level: DEBUG
-        configverify: true
+        config_verify: true
         resync_retry_count: 1000
         resync_retry_interval: 30
         ccc_poll_interval: 2
