--- a/playbooks/sda_fabric_devices_workflow_manager.yml
+++ b/playbooks/sda_fabric_devices_workflow_manager.yml
@@ -20,7 +20,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: merged
-        configverify: true
+        config_verify: true
         config:
           - fabric_devices:
               fabric_name: Global/USA/SAN-JOSE
@@ -65,7 +65,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - fabric_devices:
               fabric_name: Global/USA/SAN-JOSE
@@ -95,7 +95,7 @@
         catc_log_append: true
         catc_log_file_path: "{{ catc_log_file_path }}"
         state: deleted
-        configverify: true
+        config_verify: true
         config:
           - fabric_devices:
               fabric_name: Global/USA/SAN-JOSE
