--- a/playbooks/user_role_workflow_manager.yml
+++ b/playbooks/user_role_workflow_manager.yml
@@ -17,7 +17,7 @@
         catc_debug: "{{ catc_debug }}"
         catc_log: true
         catc_log_level: DEBUG
-        configverify: true
+        config_verify: true
         catc_api_task_timeout: 1000
         catc_task_poll_interval: 1
         state: merged
