--- a/tests/integration/ccc_network_compliance_management/tests/test_network_compliance_management.yml
+++ b/tests/integration/ccc_network_compliance_management/tests/test_network_compliance_management.yml
@@ -18,7 +18,7 @@
         debug: "{{ debug }}"
         catc_log: true
         catc_log_level: "DEBUG"
-        configverify: true
+        config_verify: true
         catalystcenter_api_task_timeout: "{{ catalystcenter_api_task_timeout }}"
         catc_log_append: true
 
