--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -15,6 +15,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Ansible and dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible ansible-lint
+          pip install -r requirements.txt || true
+
+          ANSIBLE_COLLECTIONS_PATH=$(python -c "import site; print(site.getsitepackages()[0])")/ansible_collections
+          ansible-galaxy collection build --force
+          ansible-galaxy collection install -f cisco-catalystcenter* -p $ANSIBLE_COLLECTIONS_PATH
+
       - name: Run ansible-lint
         uses: ansible/ansible-lint@v6
         with:
@@ -23,6 +38,5 @@ jobs:
             --exclude playbooks/input_events_and_notification.yml
             --exclude playbooks/image_details.yml
             --exclude playbooks/sda_fabric.yml
-          setup_python: "true"
+          setup_python: "false"
           working_directory: ""
-          requirements_file: ""
